Fix header height on smaller devices

--- a/src/styl/main.styl
+++ b/src/styl/main.styl
@@ -92,7 +92,6 @@ main
     color #fff
     padding 22px 15px 0 15px
     nav
-      margin-bottom 20px
       a
         &.fa
           color #C4A86F
